# bnbhack

./: .gitignore  AGENT_SPEC.md  README.md  RUNBOOK.md  backtest.py  cmc_probe.py  dislocation.py  fetch_universe.py  funding_edge.py  lgbm_model.py  meanrev_sweep.py
agent/: __init__.py  __main__.py  agent.py  cmc.py  config.py  risk.py  selector.py  signals.py  test_agent.py  twakcli.py
rust/: Cargo.toml  README.md
rust/src/: cmc.rs  config.rs  main.rs  monitor.rs  risk.rs  selector.rs  signals.rs  state.rs  twak.rs
scripts/: parity.py  run_agent.sh  stop_sim.py
